--- a/error/404.html
+++ b/error/404.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Not Found</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style_error.css">
+</head>
+<body>
+    <div class="error-container">
+        <h1 class="error-code">404</h1>
+        <h2 class="error-title">Not Found</h2>
+        <p class="error-message">申し訳ございません。お探しのページが見つかりません。</p>
+        
+        <div class="error-details">
+            <p><strong>エラー内容:</strong> リクエストされたページが存在しません。</p>
+            <p><strong>原因:</strong> ページが削除されたか、URLが間違っている可能性があります。</p>
+            <p><strong>対処法:</strong> ホームページに戻るか、URLを確認してください。</p>
+        </div>
+        
+        <a href="../index.html" class="btn-home">ホームに戻る</a>
+    </div>
+</body>
+</html>
